--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ${{ secrets.DOCKER_CR_ENDPOINT }}/${{ vars.DOCKER_BACKEND_IMAGE_NAME }}
+            ${{ secrets.DOCKER_CR_ENDPOINT }}/${{ vars.DOCKER_IMAGE_NAME }}
           # generate Docker tags based on the following events/attributes
           tags: |
             type=edge
